@@ -19,7 +19,6 @@ import javax.servlet.Servlet;
 import javax.servlet.ServletException;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.dhl.discover.core.rss.DiscoverRssFeed.SUB_REQUEST_LIMITATION;
 
@@ -63,7 +62,7 @@ public class RssFeedRenderServlet extends SlingSafeMethodsServlet {
 
             String rootPath = req.getResource().getPath();
             List<String> paths = articleService.getLatestArticles(rootPath, isAll ? SUB_REQUEST_LIMITATION : MAX_PAGES)
-                    .stream().map(Article::getJcrPath).collect(Collectors.toList());
+                    .stream().map(Article::getJcrPath).toList();
             feed.printEntries(paths, isFullBody);
 
             feed.printFooter();
